<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Guardian</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">Login</string>
    <string name="title_activity_start">Travel Guardian</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="username">name@domain.com</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_start">Start a Trip</string>
    <string name="title_activity_data_entry">Travel Guardian: Start a Trip</string>
    <string name="textView_emergency_contacts">Who would you like to contact in the event of an emergency?</string>
    <string name="edit_contacts">Enter an email address</string>
    <string name="textView_destination">Where will you be traveling to?</string>
    <string name="edit_destination">Enter location name or coordinates</string>
    <string name="textView_host">What is your host contact?</string>
    <string name="edit_host">Enter hotel/host contact info</string>
    <string name="textView_pingFrequency">GPS Ping Frequency: 0 hour(s)</string>
    <string name="button_setDate">Set Return Date</string>
    <string name="button_setTime">Set Return Time</string>
    <string name="button_startTrip">Start Trip</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_sign_up">Travel Guardian: Sign Up</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="title_activity_login_validation">Travel Guardian: Login</string>
    <string name="title_activity_active_trip">Travel Guardian: Active Trip</string>
    <string name="timerText1">You have</string>
    <string name="timerText2">until the end of the trip\n\n</string>
    <string name="timerButton1">Panic!</string>
    <string name="timerButton2">End Trip</string>
    <string name="title_activity_global_class">GlobalClass</string>
    <string name="title_activity_panic">Travel Guardian: Panic!</string>
    <string name="panic">The following emergency message has been sent to:</string>
    <string name="panicMessagePart1">**TRAVEL GUARDIAN EMERGENCY BROADCAST**
        \n\nYou are receiving this message because </string>
    <string name="panicMessagePart2"> has failed to return from a planned destination. You are their emergency contact.\n</string>
    <string name="destination">\nDestination: </string>
    <string name="hostContact">\nHost Contact: </string>
    <string name="GPSLoc">\nLast Known GPS Location: </string>
    <string name="title_activity_end_trip">Travel Guardian: End Trip</string>
	<string name="endTrip">Your trip is successfully completed\n\n</string>

</resources>
