<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="13sp"
    android:paddingRight="13sp" >

    <TextView
        android:id="@+id/startTextView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/logged_in_as" >
    </TextView>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/username"
        android:textStyle="bold" >
    </TextView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendOut"
        android:text="@string/button_sign_out" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startTrip"
        android:text="@string/button_start" />

</LinearLayout>
