<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="13sp"
    android:paddingRight="13sp" >
    
    <TextView
        android:id="@+id/timerTextView1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/timerText1"
        android:textColor="#93c7fc" />
    
	<TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="25sp" />
	
	<TextView
        android:id="@+id/timerTextView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/timerText2"
        android:textColor="#93c7fc" />
 
    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/timerButton1"
        android:onClick="panic" />
    
    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/timerButton2"
        android:onClick="endTrip" />

    </LinearLayout>

