<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cse4471.travelguardian.LoginValidationActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/hintUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword" >

    </EditText>

    <Button
        android:id="@+id/btnLoginValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignRight="@+id/etUsername"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:text="@string/button_login" 
        android:onClick="onClickLogin"/>
</RelativeLayout>
